comit all